--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,39 +1,15 @@
 name: CI
 on:
   - push
-  - pull_request
 
 env:
   HUSKY: 0
   FORCE_COLOR: 3
 
 jobs:
-  # tag:
-  #   name: Release Tag
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Generate timestamp
-  #       id: timestamp
-  #       run: echo "timestamp=$(date -u +%Y-%m-%dT%H:%M:%SZ)" >> $GITHUB_OUTPUT
-  #     - name: Generate release tag
-  #       id: release-tag
-  #       run: echo "tag=${{ github.ref_name }}@$(date +%Y-%m-%d_%H.%M.%S)_$(echo $GITHUB_SHA | cut -c1-8)" >> $GITHUB_OUTPUT
-  #     - name: Convert to Docker tag
-  #       id: docker-tag
-  #       run: echo "tag=$(echo ${{ steps.release-tag.outputs.tag }} | sed 's/[^a-zA-Z0-9._-]/_/g')" >> $GITHUB_OUTPUT
-  #     - name: Display release tag
-  #       run: echo "::notice title=Release Tag::${{ steps.release-tag.outputs.tag }}"
-  #   outputs:
-  #     timestamp: ${{ steps.timestamp.outputs.timestamp }}
-  #     tag: ${{ steps.release-tag.outputs.tag }}
-  #     docker-tag: ${{ steps.docker-tag.outputs.tag }}
-
-  ci:
+  integration:
     name: Integration
     runs-on: ubuntu-latest
-    # needs: tag
-    # env:
-    #   RELEASE_TAG: ${{ needs.tag.outputs.tag }}
     steps:
       - name: Generate timestamp
         id: timestamp
