chore: Keep CI side-effects free

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -48,65 +48,12 @@ jobs:
       - name: Type checking
         run: pnpm typecheck
 
-      # - name: Send test coverage to codecov
-      #   continue-on-error: true
-      #   uses: codecov/codecov-action@v2
-
-      - name: Get server version
-        id: server-pkg
-        run: echo "version=$(cat packages/server/package.json | jq -jr '.version')" >> $GITHUB_OUTPUT
-
       - name: Build (NPM)
         run: pnpm build:npm
 
-      - name: Registry authentication
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # todo: Use docker/metadata-action to organise tags & labels
       - name: Build (Docker)
         uses: docker/build-push-action@v3
         with:
           context: .
           file: packages/server/Dockerfile
-          build-args: |
-            BUILD_URL=https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}
-          labels: |
-            org.opencontainers.image.title=@e2esdk/server
-            org.opencontainers.image.description=End-to-end encryption server
-            org.opencontainers.image.version=${{ steps.server-pkg.outputs.version }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.created=${{ steps.timestamp.outputs.timestamp }}
-            org.opencontainers.image.licenses=Apache-2.0
-            org.opencontainers.image.url=https//github.com/SocialGouv/e2esdk
-            org.opencontainers.image.documentation=https://github.com/SocialGouv/e2esdk/blob/main/packages/server/README.md
-          tags: |
-            ghcr.io/socialgouv/e2esdk/server:edge
-            ghcr.io/socialgouv/e2esdk/server:sha-${{ github.sha }}
-          push: true
-
-      - name: Display Docker image labels
-        run: |
-          docker inspect e2esdk/server:sha-${{ github.sha }} --format='{{json .Config.Labels}}' \
-          | sed \
-            -e 's/^{"//' -e 's/"}$//' \
-            -e 's/\",\"/\n/g'         \
-            -e 's/":"/: /g'
-        # 1. Drop the object curly braces (and surrounding quotes)
-        # 2. Replace entry separators by newlines (and drop surrounding quotes)
-        # 3. Replace key:value separators with spaces (and drop surrounding quotes)
-
-      # - name: Functional tests
-      #   run: pnpm e2e
-
-      # - name: Build to lib folder for archives
-      #   run: pnpm build --outDir lib
-
-      # - name: Archive lib components
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: components
-      #     path: lib/
+          push: false
