--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prepare": "husky install config/husky"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
     "@types/jest": "^29.2.3",
     "husky": "^8.0.0",
