--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e2esdk/api",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "license": "Apache-2.0",
   "description": "REST API interfaces shared with e2eSDK client & server",
   "author": {
@@ -13,7 +13,7 @@
     "registry": "http://localhost:4873"
   },
   "files": [
-    "/dist"
+    "dist/"
   ],
   "type": "module",
   "sideEffects": false,
@@ -43,10 +43,10 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@e2esdk/config-jest": "workspace:*",
+    "@e2esdk/config-typescript": "workspace:*",
     "@types/node": "^18.11.10",
     "jest": "^29.3.1",
-    "jest-config": "workspace:*",
-    "tsconfig": "workspace:*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
