--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,4 +1,4 @@
 {
-  "extends": "tsconfig/tsconfig.base.json",
+  "extends": "@e2esdk/config-typescript/tsconfig.base.json",
   "include": ["src/**/*.ts"]
 }
