--- a/packages/keygen/package.json
+++ b/packages/keygen/package.json
@@ -13,7 +13,7 @@
     "registry": "http://localhost:4873"
   },
   "files": [
-    "/dist"
+    "dist/"
   ],
   "bin": {
     "keygen": "dist/keygen.js"
@@ -43,7 +43,7 @@
     "zx": "^7.1.1"
   },
   "devDependencies": {
-    "tsconfig": "workspace:*",
+    "@e2esdk/config-typescript": "workspace:*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
