--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,7 +30,7 @@
     "treeshake": true
   },
   "files": [
-    "/dist"
+    "dist/"
   ],
   "scripts": {
     "dev": "tsup --format esm --watch",
@@ -43,10 +43,10 @@
   },
   "devDependencies": {
     "@e2esdk/client": "workspace:^*",
+    "@e2esdk/config-typescript": "workspace:*",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.25",
     "react": "^18.2.0",
-    "tsconfig": "workspace:*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
