--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@e2esdk/server",
-  "version": "0.1.1",
-  "private": true,
+  "version": "0.0.1",
   "license": "Apache-2.0",
   "description": "End-to-end encryption server",
   "author": {
@@ -9,7 +8,20 @@
     "email": "npm.e2esdk@francoisbest.com",
     "url": "https://francoisbest.com"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "http://localhost:4873"
+  },
+  "files": [
+    "build/"
+  ],
   "type": "module",
+  "module": "./build/main.js",
+  "exports": {
+    ".": {
+      "import": "./build/main.js"
+    }
+  },
   "engines": {
     "node": ">=16"
   },
@@ -41,6 +53,7 @@
     "zx": "^7.1.1"
   },
   "devDependencies": {
+    "@e2esdk/config-typescript": "workspace:*",
     "@fastify/sensible": "^5.1.1",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.21",
@@ -51,7 +64,6 @@
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^9.1.1",
-    "tsconfig": "workspace:*",
     "typescript": "^4.9.3"
   },
   "nodemonConfig": {
