ref: Changeset -> SemRel, fix workspace refs

--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,6 @@
+# PNPM settings
+link-workspace-packages:deep
+save-workspace-protocol:rolling
+
+# NPM registry settings
 @e2esdk:registry=http://localhost:4873
