--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e2esdk/client",
-  "version": "0.0.1",
+  "version": "0.0.0-semantically-released",
   "license": "Apache-2.0",
   "description": "End-to-end encryption client",
   "author": {
@@ -38,8 +38,8 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:^*",
-    "@e2esdk/crypto": "workspace:^*",
+    "@e2esdk/api": "workspace:^",
+    "@e2esdk/crypto": "workspace:^",
     "local-state-sync": "1.0.0-beta.6",
     "mitt": "^3.0.0",
     "zod": "^3.19.1"
