--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e2esdk/crypto",
-  "version": "0.0.1",
+  "version": "0.0.0-semantically-released",
   "license": "Apache-2.0",
   "description": "Cryptographic constructs & algorithms for e2eSDK client & server",
   "author": {
@@ -41,7 +41,7 @@
     "test": "jest --color"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:^*",
+    "@e2esdk/api": "workspace:^",
     "@stablelib/hex": "^1.0.1",
     "libsodium-wrappers": "^0.7.10",
     "zod": "^3.19.1"
