--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@e2esdk/server",
-  "version": "0.0.1",
+  "version": "0.0.0-semantically-released",
   "license": "Apache-2.0",
   "description": "End-to-end encryption server",
   "author": {
@@ -36,8 +36,8 @@
     "db": "zx ./build/database/operations.js"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:^*",
-    "@e2esdk/crypto": "workspace:^*",
+    "@e2esdk/api": "workspace:^",
+    "@e2esdk/crypto": "workspace:^",
     "@fastify/cors": "^8.2.0",
     "@fastify/swagger": "^8.2.0",
     "@fastify/swagger-ui": "^1.3.0",
