--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: CD
+name: Release
 on:
   workflow_run:
     workflows:
@@ -14,8 +14,8 @@ env:
   FORCE_COLOR: 3
 
 jobs:
-  publish:
-    name: Publish
+  release:
+    name: Release
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -40,17 +40,17 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      # NPM publish --
+      # NPM release --
 
       - name: Build (NPM)
         run: pnpm build:npm
 
-      - name: Publish (NPM)
+      - name: Release (NPM)
         run: |
           echo '//localhost:4873/:_authToken="anonymous"' > ~/.npmrc
-          pnpm publish:npm
+          pnpm release:npm
 
-      # Docker publish --
+      # Docker release --
 
       - name: Get server version
         id: server-pkg
