--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,16 @@
 name: Release
 on:
-  workflow_run:
-    workflows:
-      - CI
+  push:
     branches:
-      # - main
       - beta
-    types:
-      - completed
+  # workflow_run:
+  #   workflows:
+  #     - CI
+  #   branches:
+  #     # - main
+  #     - beta
+  #   types:
+  #     - completed
 
 env:
   HUSKY: 0
@@ -17,7 +20,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    #if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Generate timestamp
         id: timestamp
