chore: Build/push Docker image when server is published on NPM

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,6 +1,9 @@
 name: CI
 on:
-  - push
+  push:
+    # todo: remove this once CD has stabilised
+    branches-ignore:
+      - beta
 
 env:
   HUSKY: 0
