--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,18 +49,24 @@ jobs:
         run: pnpm build:npm
 
       - name: Release (NPM)
-        run: |
-          echo '//localhost:4873/:_authToken="anonymous"' > ~/.npmrc
-          pnpm release:npm
+        run: pnpm release:npm
 
       # Docker release --
 
+      # When the server package is published to NPM,
+      # the internal @e2esdk/semantic-release plugin
+      # will store the new version number into the
+      # `server-was-published` file at the repo root.
+      # We detect its presence and store the version
+      # in a step output, which will determine whether
+      # the Docker build+push step occurs or not.
       - name: Get server version
         id: server-pkg
-        run: echo "version=$(cat packages/server/package.json | jq -jr '.version')" >> $GITHUB_OUTPUT
+        run: test -f server-was-published && echo "version=$(cat server-was-published)" >> $GITHUB_OUTPUT | true
 
       - name: Docker registry authentication
         uses: docker/login-action@v2
+        if: ${{ steps.server-pkg.outputs.version }}
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -69,6 +75,7 @@ jobs:
       # todo: Use docker/metadata-action to organise tags & labels
       - name: Build & Publish (Docker)
         uses: docker/build-push-action@v3
+        if: ${{ steps.server-pkg.outputs.version }}
         with:
           context: .
           file: packages/server/Dockerfile
@@ -86,9 +93,10 @@ jobs:
           tags: |
             ghcr.io/socialgouv/e2esdk/server:${{ steps.server-pkg.outputs.version }}
             ghcr.io/socialgouv/e2esdk/server:sha-${{ github.sha }}
-          push: false
+          push: true
 
       - name: Display Docker image labels
+        if: ${{ steps.server-pkg.outputs.version }}
         run: |
           docker inspect e2esdk/server:sha-${{ github.sha }} --format='{{json .Config.Labels}}' \
           | sed \
