--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@e2esdk/client",
+  "name": "@socialgouv/e2esdk-client",
   "version": "0.0.0-semantically-released",
   "license": "Apache-2.0",
   "description": "End-to-end encryption client",
@@ -8,9 +8,9 @@
     "email": "npm.e2esdk@francoisbest.com",
     "url": "https://francoisbest.com"
   },
+  "repository": "https://github.com/SocialGouv/e2esdk",
   "publishConfig": {
-    "access": "public",
-    "registry": "http://localhost:4873"
+    "access": "public"
   },
   "files": [
     "dist/"
@@ -38,14 +38,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:^",
-    "@e2esdk/crypto": "workspace:^",
+    "@socialgouv/e2esdk-api": "workspace:^",
+    "@socialgouv/e2esdk-crypto": "workspace:^",
     "local-state-sync": "1.0.0-beta.6",
     "mitt": "^3.0.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@e2esdk/config-typescript": "workspace:*",
+    "@socialgouv/e2esdk-config-typescript": "workspace:*",
     "tsup": "^6.5.0",
     "typescript": "^4.9.3"
   }
