--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@e2esdk/crypto",
+  "name": "@socialgouv/e2esdk-crypto",
   "version": "0.0.0-semantically-released",
   "license": "Apache-2.0",
   "description": "Cryptographic constructs & algorithms for e2eSDK client & server",
@@ -8,9 +8,9 @@
     "email": "npm.e2esdk@francoisbest.com",
     "url": "https://francoisbest.com"
   },
+  "repository": "https://github.com/SocialGouv/e2esdk",
   "publishConfig": {
-    "access": "public",
-    "registry": "http://localhost:4873"
+    "access": "public"
   },
   "files": [
     "dist/"
@@ -41,14 +41,14 @@
     "test": "jest --color"
   },
   "dependencies": {
-    "@e2esdk/api": "workspace:^",
+    "@socialgouv/e2esdk-api": "workspace:^",
     "@stablelib/hex": "^1.0.1",
     "libsodium-wrappers": "^0.7.10",
     "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@e2esdk/config-jest": "workspace:*",
-    "@e2esdk/config-typescript": "workspace:*",
+    "@socialgouv/e2esdk-config-jest": "workspace:*",
+    "@socialgouv/e2esdk-config-typescript": "workspace:*",
     "@types/libsodium-wrappers": "^0.7.10",
     "@types/node": "^18.11.10",
     "jest": "^29.3.1",
