--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@e2esdk/devtools",
+  "name": "@socialgouv/e2esdk-devtools",
   "version": "0.0.0-semantically-released",
   "license": "Apache-2.0",
   "description": "Developer tools panel to inspect and interact with an e2esdk client",
@@ -8,9 +8,9 @@
     "email": "npm.e2esdk@francoisbest.com",
     "url": "https://francoisbest.com"
   },
+  "repository": "https://github.com/SocialGouv/e2esdk",
   "publishConfig": {
-    "access": "public",
-    "registry": "http://localhost:4873"
+    "access": "public"
   },
   "type": "module",
   "main": "./dist/index.cjs",
@@ -42,11 +42,11 @@
     "typecheck": "tsc"
   },
   "peerDependencies": {
-    "@e2esdk/client": "workspace:^"
+    "@socialgouv/e2esdk-client": "workspace:^"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.2",
-    "@e2esdk/react": "workspace:^",
+    "@socialgouv/e2esdk-react": "workspace:^",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -60,9 +60,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
-    "@e2esdk/client": "workspace:^",
-    "@e2esdk/crypto": "workspace:^",
-    "@e2esdk/server": "workspace:^",
+    "@socialgouv/e2esdk-client": "workspace:^",
+    "@socialgouv/e2esdk-crypto": "workspace:^",
+    "@socialgouv/e2esdk-server": "workspace:^",
     "@types/node": "^18.11.10",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
