--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,7 +114,8 @@ jobs:
       # the Docker build+push step occurs or not.
       - name: Check if server needs publishing
         id: server-needs-publishing
-        run: test -f server-needs-publishing && echo "version=$(cat server-needs-publishing)" >> $GITHUB_OUTPUT | true
+        run: test -f server-needs-publishing && echo "version=$(cat server-needs-publishing)" >> $GITHUB_OUTPUT
+        continue-on-error: true
 
       - name: Docker registry authentication
         uses: docker/login-action@v2
