--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -114,8 +114,11 @@ jobs:
       # the Docker build+push step occurs or not.
       - name: Check if server needs publishing
         id: server-needs-publishing
-        run: test -f server-needs-publishing && echo "version=$(cat server-needs-publishing)" >> $GITHUB_OUTPUT
-        continue-on-error: true
+        run: |
+          if test -f server-needs-publishing;
+          then
+            echo "version=$(cat server-needs-publishing)" >> $GITHUB_OUTPUT;
+          fi
 
       - name: Docker registry authentication
         uses: docker/login-action@v2
